# ez-netflow

./: .gitignore  Cargo.toml  LICENSE  README.md  config.ini  eznf_db.db3  eznf_db.sqlite
ez_netflow_cli/: Cargo.toml  README.md
ez_netflow_cli/src/: cli.rs  main.rs
ez_netflow_lib/: Cargo.toml  README.md
ez_netflow_lib/src/: .gitignore  lib.rs  senders.rs  server.rs  sql.rs  templates.rs  time.rs  utils.rs
src/: cli.rs  ez_netflow.rs  fields.rs  main.rs  senders.rs  server.rs  settings.rs  sql.rs  templates.rs  utils.rs
src/ez_nf/: fields.rs  mod.rs  senders.rs  server.rs  templates.rs  utils.rs
