[package]
name = "ez-netflow"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/vektorprime/ez_netflow"
[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }
tabled = "0.17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "^0.12.0"
log = "0.4"