[package]
name = "ez-netflow"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "EZ-Netflow is a netflow server that's easy to use. You can use EZ-Netflow as an addon to your code by allowing it to process netflow traffic and save the data to SQLite. You can also use EZ-Netflow as a standalone server that processes netflow and displays the results in the console in a table format."

repository = "https://github.com/vektorprime/ez_netflow"
[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }
tabled = "0.17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "^0.12.0"
log = "0.4"