[package]
name = "ez_netflow_cli"
version = "0.1.3"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "EZ-Netflow is an all-in-one netflow server and library that's really easy to use. This is the CLI crate, which creates the ready-to-go executable that includes the netflow server and automatic output of data in table format in the console. If you want to incorporate the server into your code check out ez-netflow-lib."
keywords = ["netflow", "ipfix", "sflow"]
categories = ["network-programming", "command-line-utilities"]
maintenance = { status = "actively-developed" }
repository = "https://github.com/vektorprime/ez-netflow"

[dependencies]
#ez_netflow_lib = "0.1"
ez_netflow_lib = { path = "../ez_netflow_lib"}
rusqlite = { version = "0.33.0", features = ["bundled"] }
tabled = "0.17.0"
simplelog = "^0.12.0"
log = "0.4"