[package]
name = "ez_netflow_lib"
version = "0.1.2"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "EZ-Netflow is an all-in-one netflow server and library that's really easy to use. This is the lib crate, which contains the core server and database code. Use this crate directly if you want to incorporate EZ-Netflow into your project."
keywords = ["netflow", "ipfix", "sflow"]
categories = ["network-programming", "command-line-utilities"]
maintenance = { status = "actively-developed" }
repository = "https://github.com/vektorprime/ez-netflow"


[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }
tabled = "0.17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "^0.12.0"
log = "0.4"
chrono = "0.4"